@@ -8,7 +8,9 @@ version 1.3.3
 - Fixes for appending data (make more flexible: allow appending of
   observations and/or variables)
 - Fixes for cointegration tests: improve dialogs and prevent crash
-  on selection of one variable plus the constant
+  on selection of just one variable plus the constant
+- Graph control dialog: add one-click option to force use of a
+  single y axis
 
 01/28/2005 version 1.3.2
 - Fix bug in auto-determination of lag in ADF test: was looking
